--- a/style.css
+++ b/style.css
@@ -1,32 +1,39 @@
-*, ::before, ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Expletus Sans', cursive;
+/* Couleur1: #DFE0E0 */
+/* Couleur2: #Fc9C73 */
+/* Couleur3: #3B4358 */
+
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Josefin+Sans&display=swap');
+
+body {
+    font-family: 'Josefin Sans', sans-serif;  
+    font-size: 19px;
 }
 
-#home-page {
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #2c3e50;
-    color: white;
-    padding: 30px;
+header {
+    font-family: 'Bangers', cursive;
 }
 
-h1 {
-    font-size: 35px;
+nav {
+    background-color: #3B4358;
 }
 
-h2 {
-    font-size: 25px;
+#vitrine {
+    height: 70vh;
+    background-color: #3B4358;
+    font-family: 'Bangers', cursive;
 }
 
-#div-image img {
-    width: 300px;
-    height: 300px;
+#pdp {
     border-radius: 100%;
-    margin: 30px;
+    width: 320px;
+    border: 4px solid black;
+    background-color: white;
+}
+
+#img-computer {
+    width: 90%;
+}
+
+#competences {
+    background-color: #DFE0E0;
 }
