--- a/site-statique/bienvenue-tokyo/style.css
+++ b/site-statique/bienvenue-tokyo/style.css
@@ -338,6 +338,7 @@ nav li:hover {
 #contact h2 {
     font-family: 'Merienda One', cursive;
     text-align: center;
+    font-size: 30px;
 }
 
 #contact .formulaire {
