--- a/30-jours-code/1-Calculatrice/style.css
+++ b/30-jours-code/1-Calculatrice/style.css
@@ -25,6 +25,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: color 0.5s, background-color 0.5s;
 }
 
 main {
@@ -47,6 +48,7 @@ h2 {
     font-size: 12px;
     text-transform: uppercase;
     margin-right: 15px;
+    transition: color 0.5s, background-color 0.5s;
 }
 
 .theme {
@@ -98,6 +100,8 @@ h2 {
     background-color: hsl(224, 36%, 15%);
     padding: 0px 20px;
     font-size: 30px;
+    overflow: hidden;
+    transition: color 200ms ease;
 }
 
 .table-btn {
@@ -122,6 +126,7 @@ h2 {
     cursor: pointer;
     font-size: 20px;
     border-bottom: 3px solid hsl(28, 16%, 65%);
+    transition: 0.5s all;
 }
 
 .btn-4 {
@@ -137,6 +142,7 @@ h2 {
     border-radius: 7px;
     cursor: pointer;
     font-size: 15px;
+    transition: 0.5s all;
 }
 
 .btn-gros-1 {
