--- a/30-jours-code/32-projet-marcos-tailwind/input.css
+++ b/30-jours-code/32-projet-marcos-tailwind/input.css
@@ -20,50 +20,57 @@
 }
 
 .content-text-acceuil h2 {
-    animation: animation-mot-1;
+    animation: anim-mot-1;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    animation-delay: 1600ms;
+    animation-delay: 1800ms;
+}
+
+.content-text-acceuil {
+    animation: anim-content-acceuil;
+    animation-duration: 200ms;
+    animation-fill-mode: forwards;
+    transform: scale(0)
 }
 
 .mot-1-acceuil {
-    animation: animation-mot-1;
+    animation: anim-mot-1;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
 
 .mot-1-acceuil-2 {
-    animation-delay: 200ms;
+    animation-delay: 400ms;
 }
 
 .mot-1-acceuil-3 {
-    animation-delay: 400ms
-}
-
-.mot-1-acceuil-4 {
     animation-delay: 600ms
 }
 
+.mot-1-acceuil-4 {
+    animation-delay: 800ms
+}
+
 .mot-2-acceuil {
-    animation: animation-mot-1;
+    animation: anim-mot-1;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
 
 .mot-2-acceuil-1 {
-    animation-delay: 800ms;
-}
-
-.mot-2-acceuil-2 {
     animation-delay: 1000ms;
 }
 
-.mot-2-acceuil-3 {
+.mot-2-acceuil-2 {
     animation-delay: 1200ms;
 }
 
-.mot-2-acceuil-4 {
+.mot-2-acceuil-3 {
     animation-delay: 1400ms;
+}
+
+.mot-2-acceuil-4 {
+    animation-delay: 1600ms;
 }
 
 nav ul li a {
@@ -88,11 +95,38 @@ nav ul li a:hover::after {
     opacity: 1;
 }
 
-@keyframes animation-mot-1 {
+.content-arrow {
+    animation: anim-arrow;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-duration: 1200ms
+}
+
+@keyframes anim-mot-1 {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
     }
+}
+
+@keyframes anim-content-acceuil {
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes anim-arrow {
+    
+    from {
+        opacity: 0.4;
+    }
+
+    to {
+        transform: translateY(30px);
+        opacity: 1;
+    }
+
 }
