--- a/30-jours-code/32-projet-marcos-tailwind/input.css
+++ b/30-jours-code/32-projet-marcos-tailwind/input.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+    scroll-behavior: smooth;
+}
+
 .font-principal {
     font-family: 'Barlow', sans-serif;
 }
@@ -14,7 +18,7 @@
 }
 
 .content-bg-acceuil {
-    background-image: url('./images/bg-img-1.jpg');
+    background-image: url('./images/fond-1.jpg');
     background-color: #0004;
     background-blend-mode: color;
 }
@@ -102,6 +106,11 @@ nav ul li a:hover::after {
     animation-duration: 1200ms
 }
 
+.img-carousel {
+    width: 100%;
+    height: 400px;
+}
+
 @keyframes anim-mot-1 {
     from {
         opacity: 0;
@@ -129,4 +138,29 @@ nav ul li a:hover::after {
         opacity: 1;
     }
 
+}
+
+#mission, #objectif, #historique, #dominique {
+    @apply container mx-auto py-8 md:px-8 lg:px-12;
+}
+
+#mission h1, #objectif h1, #historique h1, #dominique h1 {
+    @apply font-titre font-extrabold text-2xl mb-4; 
+}
+
+#mission h2, #objectif h2, #historique h2, #dominique h2 {
+    @apply font-titre font-extrabold text-xl mb-4 text-gray-700; 
+}
+
+
+#mission p, #objectif p, #historique p, #dominique p {
+    @apply font-semibold tracking-wide text-lg leading-8 text-gray-700;
+}
+
+#mission ul, #objectif ul, #historique ul, #dominique ul {
+    @apply list-disc;
+}
+
+#mission li, #objectif li, #historique li, #dominique li {
+    @apply font-titre  font-extrabold text-xl text-gray-700 my-2;
 }
