--- a/30-jours-code/19-chap-app-landing-page/output.css
+++ b/30-jours-code/19-chap-app-landing-page/output.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&family=Fraunces:wght@600;800&display=swap');
-
 /* ./your-css-folder/styles.css */
 
-/* ! tailwindcss v2.2.2 | MIT License | https://tailwindcss.com */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
+/* ! tailwindcss v2.2.4 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -206,7 +206,8 @@ select { /* 1 */
 Correct the inability to style clickable types in iOS and Safari.
 */
 
-button {
+button,
+[type='button'] {
   -webkit-appearance: button;
 }
 
@@ -299,16 +300,6 @@ pre {
 button {
   background-color: transparent;
   background-image: none;
-}
-
-/**
- * Work around a Firefox/IE bug where the transparent `button` background
- * results in a loss of the default `button` focus styles.
- */
-
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
 }
 
 fieldset {
@@ -533,40 +524,6 @@ video {
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
-.container{
-  width: 100%;
-}
-
-@media (min-width: 640px){
-  .container{
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px){
-  .container{
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px){
-  .container{
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px){
-  .container{
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
-  }
-}
-
 .absolute{
   position: absolute;
 }
@@ -579,29 +536,38 @@ video {
   top: 0px;
 }
 
-.top-1\/2{
-  top: 50%;
+.top-16{
+  top: 4rem;
 }
 
-.right-4{
-  right: 1rem;
-}
-
-.-bottom-8{
-  bottom: -2rem;
+.top-32{
+  top: 8rem;
 }
 
 .left-0{
   left: 0px;
 }
 
-.left-4{
-  left: 1rem;
+.left-1\/2{
+  left: 50%;
+}
+
+.z-0{
+  z-index: 0;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .mt-2{
@@ -612,28 +578,20 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mr-2{
+  margin-right: 0.5rem;
 }
 
-.mt-12{
-  margin-top: 3rem;
+.ml-3{
+  margin-left: 0.75rem;
 }
 
-.mt-16{
-  margin-top: 4rem;
+.ml-4{
+  margin-left: 1rem;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
-}
-
-.block{
-  display: block;
+.ml-auto{
+  margin-left: auto;
 }
 
 .flex{
@@ -644,40 +602,60 @@ video {
   display: table;
 }
 
-.hidden{
-  display: none;
+.h-5{
+  height: 1.25rem;
 }
 
-.h-96{
-  height: 24rem;
+.h-6{
+  height: 1.5rem;
 }
 
-.h-screen{
-  height: 100vh;
+.h-8{
+  height: 2rem;
+}
+
+.h-1\/6{
+  height: 16.666667%;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
+.w-5{
+  width: 1.25rem;
 }
 
 .w-8{
   width: 2rem;
 }
 
-.w-16{
-  width: 4rem;
+.w-10{
+  width: 2.5rem;
 }
 
-.w-20{
-  width: 5rem;
+.w-12{
+  width: 3rem;
 }
 
-.w-64{
-  width: 16rem;
+.w-80{
+  width: 20rem;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-full{
   width: 100%;
 }
 
-.flex-shrink-0{
-  flex-shrink: 0;
+.max-w-3xl{
+  max-width: 48rem;
 }
 
 .transform{
@@ -691,13 +669,8 @@ video {
   transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-y-1\/2{
-  --tw-translate-y: -50%;
-}
-
-.hover\:scale-110:hover{
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
+.-translate-x-1\/2{
+  --tw-translate-x: -50%;
 }
 
 @-webkit-keyframes spin{
@@ -766,45 +739,21 @@ video {
   }
 }
 
-.cursor-pointer{
-  cursor: pointer;
-}
-
-.list-none{
-  list-style-type: none;
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.flex-wrap{
-  flex-wrap: wrap;
 }
 
 .items-center{
   align-items: center;
 }
 
-.justify-center{
-  justify-content: center;
+.gap-x-2{
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
-.justify-between{
-  justify-content: space-between;
-}
-
-.justify-around{
-  justify-content: space-around;
-}
-
-.gap-x-12{
-  -moz-column-gap: 3rem;
-       column-gap: 3rem;
+.gap-y-2{
+  row-gap: 0.5rem;
 }
 
 .overflow-hidden{
@@ -815,75 +764,109 @@ video {
   border-radius: 0.5rem;
 }
 
-.border-4{
-  border-width: 4px;
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.rounded-t-2xl{
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.rounded-b-lg{
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-b-2xl{
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border{
   border-width: 1px;
 }
 
-.border-gray-text{
-  border-color: #fffc;
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 
-.bg-black{
+.border-very-light-magenta{
+  --tw-border-opacity: 1;
+  border-color: hsla(289, 100%, 72%, var(--tw-border-opacity));
+}
+
+.bg-white{
   --tw-bg-opacity: 1;
-  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.bg-gray-100{
+.bg-pale-violet{
   --tw-bg-opacity: 1;
-  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+  background-color: hsla(276, 100%, 81%, var(--tw-bg-opacity));
 }
 
-.bg-green-bg{
-  background-color: #0f02;
+.bg-very-dark-desaturated-violet{
+  --tw-bg-opacity: 1;
+  background-color: hsla(271, 36%, 24%, var(--tw-bg-opacity));
 }
 
-.bg-img-carousel-description-1{
-  background-image: url('./images/pic_1.jpg');
+.bg-light-violet{
+  --tw-bg-opacity: 1;
+  background-color: hsla(264, 100%, 61%, var(--tw-bg-opacity));
 }
 
-.bg-img-carousel-description-2{
-  background-image: url('./images/pic_2.jpg');
+.bg-light-grayish-violet{
+  --tw-bg-opacity: 1;
+  background-color: hsla(270, 20%, 96%, var(--tw-bg-opacity));
 }
 
-.bg-img-carousel-description-3{
-  background-image: url('./images/pic_3.jpg');
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
 }
 
-.bg-img-carousel-description-4{
-  background-image: url('./images/pic_4.jpg');
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-img-carousel-description-5{
-  background-image: url('./images/pic_5.jpg');
+.bg-gradient-to-b{
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.bg-img-carousel-description-6{
-  background-image: url('./images/pic_6.jpg');
+.bg-gradient-to-l{
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
 
-.bg-cover{
-  background-size: cover;
+.from-light-magenta{
+  --tw-gradient-from: hsl(293, 100%, 63%);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, hsla(293, 100%, 63%, 0));
 }
 
-.bg-contain{
-  background-size: contain;
+.from-light-violet{
+  --tw-gradient-from: hsl(264, 100%, 61%);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, hsla(264, 100%, 61%, 0));
 }
 
-.bg-center{
-  background-position: center;
+.to-light-magenta{
+  --tw-gradient-to: hsl(293, 100%, 63%);
 }
 
-.bg-no-repeat{
-  background-repeat: no-repeat;
+.to-light-violet{
+  --tw-gradient-to: hsl(264, 100%, 61%);
 }
 
-.px-0{
-  padding-left: 0px;
-  padding-right: 0px;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4{
@@ -891,9 +874,19 @@ video {
   padding-right: 1rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-4{
@@ -901,18 +894,16 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
 
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.pb-4{
+  padding-bottom: 1rem;
 }
 
-.pl-4{
-  padding-left: 1rem;
+.pb-24{
+  padding-bottom: 6rem;
 }
 
 .text-center{
@@ -929,8 +920,8 @@ video {
   line-height: 1.25rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
+.text-xl{
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -939,37 +930,20 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.font-medium{
+  font-weight: 500;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
-.font-extrabold{
-  font-weight: 800;
+.font-bold{
+  font-weight: 700;
 }
 
 .leading-7{
   line-height: 1.75rem;
 }
 
-.leading-8{
-  line-height: 2rem;
-}
-
 .tracking-wide{
   letter-spacing: 0.025em;
-}
-
-.tracking-wider{
-  letter-spacing: 0.05em;
-}
-
-.tracking-widest{
-  letter-spacing: 0.1em;
 }
 
 .text-white{
@@ -977,26 +951,24 @@ video {
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
-.text-gray-700{
+.text-pale-violet{
   --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
+  color: hsla(276, 100%, 81%, var(--tw-text-opacity));
 }
 
-.text-gray-text{
-  color: #fffc;
-}
-
-.text-green-text{
-  color: #0f0d;
-}
-
-.hover\:text-white:hover{
+.text-moderate-violet{
   --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  color: hsla(276, 55%, 52%, var(--tw-text-opacity));
 }
 
-.opacity-0{
-  opacity: 0;
+.text-very-dark-desaturated-violet{
+  --tw-text-opacity: 1;
+  color: hsla(271, 36%, 24%, var(--tw-text-opacity));
+}
+
+.text-dark-grayish-violet{
+  --tw-text-opacity: 1;
+  color: hsla(270, 7%, 64%, var(--tw-text-opacity));
 }
 
 *, ::before, ::after{
@@ -1012,427 +984,85 @@ video {
   --tw-ring-shadow: 0 0 #0000;
 }
 
-.transition{
-  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+body {
+  font-family: 'Rubik', sans-serif;
 }
 
-html{
-  scroll-behavior: smooth;
+#bg-1 {
+  height: calc((2/6) * 100vh);
 }
 
-.font-principal {
-  font-family: 'Barlow', sans-serif;
+#bg-2 {
+  height: calc((1/2) * 100vw);
+  top: calc((2/6) * 100vh);
+  -webkit-clip-path: circle(100% at 0 0);
+          clip-path: circle(100% at 0 0);
 }
 
-.font-titre {
-  font-family: 'Fraunces', serif;
-}
-
-.content-bg-acceuil {
-  background-image: url('./images/fond-1.jpg');
-  background-color: #0006;
-  background-blend-mode: color;
-  -webkit-animation: anim-bg-acceuil;
-          animation: anim-bg-acceuil;
-  -webkit-animation-duration: 12000ms;
-          animation-duration: 12000ms;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-
-.content-text-acceuil h2 {
-  -webkit-animation: anim-mot-1;
-          animation: anim-mot-1;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  -webkit-animation-delay: 1800ms;
-          animation-delay: 1800ms;
-}
-
-.content-text-acceuil {
-  -webkit-animation: anim-content-acceuil;
-          animation: anim-content-acceuil;
-  -webkit-animation-duration: 200ms;
-          animation-duration: 200ms;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  transform: scale(0)
-}
-
-.mot-1-acceuil {
-  -webkit-animation: anim-mot-1;
-          animation: anim-mot-1;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-.mot-1-acceuil-2 {
-  -webkit-animation-delay: 400ms;
-          animation-delay: 400ms;
-}
-
-.mot-1-acceuil-3 {
-  -webkit-animation-delay: 600ms;
-          animation-delay: 600ms
-}
-
-.mot-1-acceuil-4 {
-  -webkit-animation-delay: 800ms;
-          animation-delay: 800ms
-}
-
-.mot-2-acceuil {
-  -webkit-animation: anim-mot-1;
-          animation: anim-mot-1;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-.mot-2-acceuil-1 {
-  -webkit-animation-delay: 1000ms;
-          animation-delay: 1000ms;
-}
-
-.mot-2-acceuil-2 {
-  -webkit-animation-delay: 1200ms;
-          animation-delay: 1200ms;
-}
-
-.mot-2-acceuil-3 {
-  -webkit-animation-delay: 1400ms;
-          animation-delay: 1400ms;
-}
-
-.mot-2-acceuil-4 {
-  -webkit-animation-delay: 1600ms;
-          animation-delay: 1600ms;
-}
-
-nav ul li a {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-nav ul li a::after {
-  content: "";
-  display: block;
-  border: 1px solid#fffc;
-  opacity: 0;
-  width: 0;
-  transition: 200ms ease-out;
-}
-
-nav ul li a:hover::after {
-  content: "";
-  width: 60%;
-  opacity: 1;
-}
-
-.content-arrow {
-  -webkit-animation: anim-arrow;
-          animation: anim-arrow;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-  -webkit-animation-duration: 21000ms;
-          animation-duration: 21000ms;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-}
-
-.img-carousel {
-  width: 100%;
-  height: 400px;
-}
-
-@-webkit-keyframes anim-bg-acceuil {
-  0% {
-    background-image: url('images/fond-1.jpg');
-  }
-
-  33% {
-    background-image: url('images/fond-2.jpg');
-  }
-
-  66% {
-    background-image: url('images/fond-3.jpg');
+@media(min-width: 1024px) {
+  #bg-1 {
+    height: calc((4/5) * 100vh);
   }
 }
 
-@keyframes anim-bg-acceuil {
-  0% {
-    background-image: url('images/fond-1.jpg');
-  }
-
-  33% {
-    background-image: url('images/fond-2.jpg');
-  }
-
-  66% {
-    background-image: url('images/fond-3.jpg');
-  }
+::-moz-placeholder {
+  color: hsl(206, 6%, 79%);
 }
 
-@-webkit-keyframes anim-mot-1 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+:-ms-input-placeholder {
+  color: hsl(206, 6%, 79%);
 }
 
-@keyframes anim-mot-1 {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes anim-content-acceuil {
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes anim-content-acceuil {
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes anim-arrow {
-  from {
-    opacity: 0.4;
-  }
-
-  to {
-    transform: translateY(30px);
-    opacity: 1;
-  }
-}
-
-@keyframes anim-arrow {
-  from {
-    opacity: 0.4;
-  }
-
-  to {
-    transform: translateY(30px);
-    opacity: 1;
-  }
-}
-
-.transition-position {
-  transition: right 0.3s ease-out;
-}
-
-#mission, #objectif, #historique, #dominique {
-  width: 100%;
+::placeholder {
+  color: hsl(206, 6%, 79%);
 }
 
 @media (min-width: 640px){
-  #mission, #objectif, #historique, #dominique{
-    max-width: 640px;
-  }
 }
 
 @media (min-width: 768px){
-  #mission, #objectif, #historique, #dominique{
-    max-width: 768px;
-  }
 }
 
 @media (min-width: 1024px){
-  #mission, #objectif, #historique, #dominique{
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px){
-  #mission, #objectif, #historique, #dominique{
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px){
-  #mission, #objectif, #historique, #dominique{
-    max-width: 1536px;
-  }
-}
-
-#mission, #objectif, #historique, #dominique{
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-@media (min-width: 768px){
-  #mission, #objectif, #historique, #dominique{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
-@media (min-width: 1024px){
-  #mission, #objectif, #historique, #dominique{
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-}
-
-#mission h1, #objectif h1, #historique h1, #dominique h1 {
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 800;
-  font-family: 'Fraunces', serif;
-}
-
-#mission h2, #objectif h2, #historique h2, #dominique h2 {
-  margin-bottom: 1rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  font-weight: 800;
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-  font-family: 'Fraunces', serif;
-}
-
-#mission p, #objectif p, #historique p, #dominique p {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  font-weight: 600;
-  line-height: 2rem;
-  letter-spacing: 0.025em;
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-
-#mission ul, #objectif ul, #historique ul {
-  list-style-type: disc;
-}
-
-#mission ol, #objectif ol, #historique ol, #dominique ol {
-  list-style-type: decimal;
-}
-
-#mission li, #objectif li, #historique li, #dominique li {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  font-weight: 800;
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-  font-family: 'Fraunces', serif;
-}
-
-@media (min-width: 640px){
-  .sm\:w-32{
-    width: 8rem;
+  .lg\:-left-24{
+    left: -6rem;
   }
 
-  .sm\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .sm\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
-  }
-}
-
-@media (min-width: 768px){
-  .md\:mt-1{
-    margin-top: 0.25rem;
-  }
-
-  .md\:flex{
+  .lg\:flex{
     display: flex;
   }
 
-  .md\:hidden{
+  .lg\:hidden{
     display: none;
   }
 
-  .md\:w-44{
-    width: 11rem;
+  .lg\:w-1\/3{
+    width: 33.333333%;
   }
 
-  .md\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .lg\:max-w-sm{
+    max-width: 24rem;
   }
 
-  .md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .lg\:max-w-4xl{
+    max-width: 56rem;
   }
 
-  .md\:text-6xl{
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-}
-
-@media (min-width: 1024px){
-  .lg\:mt-0{
-    margin-top: 0px;
+  .lg\:items-center{
+    align-items: center;
   }
 
-  .lg\:grid{
-    display: grid;
+  .lg\:justify-center{
+    justify-content: center;
   }
 
-  .lg\:w-48{
-    width: 12rem;
-  }
-
-  .lg\:flex-row{
-    flex-direction: row;
+  .lg\:rounded-b-full{
+    border-bottom-right-radius: 9999px;
+    border-bottom-left-radius: 9999px;
   }
 
   .lg\:text-left{
     text-align: left;
-  }
-
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .lg\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .lg\:text-8xl{
-    font-size: 6rem;
-    line-height: 1;
   }
 }
 
