--- a/output.css
+++ b/output.css
@@ -583,6 +583,13 @@ video {
 	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 	--tw-border-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+	--tw-ring-offset-width: 0px;
+	--tw-ring-offset-color: #fff;
+	--tw-ring-color: rgba(59, 130, 246, 0.5);
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
 	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
 	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
 	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
@@ -603,6 +610,12 @@ video {
 		max-width: 640px;
 	}
 }
+@media (min-width: 720px){
+
+	.container{
+		max-width: 720px;
+	}
+}
 @media (min-width: 768px){
 
 	.container{
@@ -619,6 +632,12 @@ video {
 
 	.container{
 		max-width: 1280px;
+	}
+}
+@media (min-width: 1440px){
+
+	.container{
+		max-width: 1440px;
 	}
 }
 @media (min-width: 1536px){
@@ -684,8 +703,17 @@ video {
 .mt-3{
 	margin-top: 0.75rem;
 }
+.mt-16{
+	margin-top: 4rem;
+}
 .mt-12{
 	margin-top: 3rem;
+}
+.mb-1\.5{
+	margin-bottom: 0.375rem;
+}
+.mb-1{
+	margin-bottom: 0.25rem;
 }
 .ml-8{
 	margin-left: 2rem;
@@ -705,6 +733,9 @@ video {
 .h-full{
 	height: 100%;
 }
+.h-11{
+	height: 2.75rem;
+}
 .h-8{
 	height: 2rem;
 }
@@ -714,11 +745,17 @@ video {
 .w-full{
 	width: 100%;
 }
-.w-8{
-	width: 2rem;
-}
 .w-\[500px\]{
 	width: 500px;
+}
+.w-11{
+	width: 2.75rem;
+}
+.w-\[250px\]{
+	width: 250px;
+}
+.w-8{
+	width: 2rem;
 }
 .w-\[300px\]{
 	width: 300px;
@@ -748,6 +785,22 @@ video {
 .gap-y-3{
 	row-gap: 0.75rem;
 }
+.gap-y-12{
+	row-gap: 3rem;
+}
+.gap-y-6{
+	row-gap: 1.5rem;
+}
+.gap-x-4{
+	-moz-column-gap: 1rem;
+	     column-gap: 1rem;
+}
+.gap-y-1{
+	row-gap: 0.25rem;
+}
+.gap-y-8{
+	row-gap: 2rem;
+}
 .gap-y-4{
 	row-gap: 1rem;
 }
@@ -755,14 +808,14 @@ video {
 	-moz-column-gap: 0.5rem;
 	     column-gap: 0.5rem;
 }
-.gap-y-8{
-	row-gap: 2rem;
-}
 .overflow-x-hidden{
 	overflow-x: hidden;
 }
 .rounded-full{
 	border-radius: 9999px;
+}
+.rounded{
+	border-radius: 0.25rem;
 }
 .border{
 	border-width: 1px;
@@ -779,6 +832,10 @@ video {
 }
 .border-\[\#fff2\]{
 	border-color: #fff2;
+}
+.bg-bleu-transparent{
+	--tw-bg-opacity: 1;
+	background-color: rgba(223, 243, 252, var(--tw-bg-opacity));
 }
 .bg-bleu-clair{
 	--tw-bg-opacity: 1;
@@ -797,6 +854,18 @@ video {
 .px-4{
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+.px-6{
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
+.py-6{
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+.py-2{
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }
 .pb-2{
 	padding-bottom: 0.5rem;
@@ -822,13 +891,21 @@ video {
 .text-\[18px\]{
 	font-size: 18px;
 }
-.text-2xl{
-	font-size: 1.5rem;
-	line-height: 2rem;
+.text-xl{
+	font-size: 1.25rem;
+	line-height: 1.75rem;
 }
 .text-lg{
 	font-size: 1.125rem;
 	line-height: 1.75rem;
+}
+.text-sm{
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
+.text-2xl{
+	font-size: 1.5rem;
+	line-height: 2rem;
 }
 .font-bold{
 	font-weight: 700;
@@ -850,8 +927,18 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(20, 157, 221, var(--tw-text-opacity));
 }
+.text-bleu-fonce{
+	--tw-text-opacity: 1;
+	color: rgba(23, 59, 108, var(--tw-text-opacity));
+}
+.text-\[\#000c\]{
+	color: #000c;
+}
 .text-\[\#fffa\]{
 	color: #fffa;
+}
+.underline{
+	text-decoration: underline;
 }
 .brightness-50{
 	--tw-brightness: brightness(.5);
@@ -880,6 +967,49 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(23, 59, 108, var(--tw-text-opacity));
         font-family: 'Raleway', sans-serif;
+}
+.ombre {
+        box-shadow: 3px 3px 20px 5px #0001;
+    }
+.form-group input{
+	display: block;
+	width: 100%;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	letter-spacing: 0.025em;
+	color: #000c;
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+	--tw-ring-color: #8884;
+}
+.form-group input:active{
+	color: #000c;
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(20, 157, 221, var(--tw-ring-opacity));
+}
+.form-group textarea{
+	display: block;
+	width: 100%;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	letter-spacing: 0.025em;
+	color: #000c;
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+	--tw-ring-color: #8884;
 }
 
 html {
@@ -975,10 +1105,6 @@ body{
 
 @media (min-width: 1024px){
 
-	.lg\:left-0{
-		left: 0px;
-	}
-
 	.lg\:my-6{
 		margin-top: 1.5rem;
 		margin-bottom: 1.5rem;
@@ -992,12 +1118,12 @@ body{
 		margin-top: 0px;
 	}
 
-	.lg\:flex{
-		display: flex;
+	.lg\:mt-8{
+		margin-top: 2rem;
 	}
 
-	.lg\:hidden{
-		display: none;
+	.lg\:flex{
+		display: flex;
 	}
 
 	.lg\:h-\[350px\]{
@@ -1008,13 +1134,32 @@ body{
 		width: 350px;
 	}
 
-	.lg\:translate-x-\[300px\]{
-		--tw-translate-x: 300px;
-		transform: var(--tw-transform);
+	.lg\:w-2\/5{
+		width: 40%;
+	}
+
+	.lg\:w-3\/5{
+		width: 60%;
+	}
+
+	.lg\:w-full{
+		width: 100%;
+	}
+
+	.lg\:flex-row{
+		flex-direction: row;
+	}
+
+	.lg\:flex-col{
+		flex-direction: column;
 	}
 
 	.lg\:justify-between{
 		justify-content: space-between;
+	}
+
+	.lg\:justify-around{
+		justify-content: space-around;
 	}
 
 	.lg\:gap-x-8{
@@ -1022,9 +1167,19 @@ body{
 		     column-gap: 2rem;
 	}
 
+	.lg\:gap-x-4{
+		-moz-column-gap: 1rem;
+		     column-gap: 1rem;
+	}
+
 	.lg\:px-4{
 		padding-left: 1rem;
 		padding-right: 1rem;
+	}
+
+	.lg\:py-12{
+		padding-top: 3rem;
+		padding-bottom: 3rem;
 	}
 
 	.lg\:text-\[64px\]{
@@ -1034,8 +1189,24 @@ body{
 	.lg\:text-\[32px\]{
 		font-size: 32px;
 	}
+}
 
-    .lg\:w-lg {
+@media (min-width: 1440px){
+
+	.desktop\:left-0{
+		left: 0px;
+	}
+
+	.desktop\:hidden{
+		display: none;
+	}
+
+	.desktop\:translate-x-\[300px\]{
+		--tw-translate-x: 300px;
+		transform: var(--tw-transform);
+	}
+
+    .desktop\:w-lg {
         width: calc(100vw - 300px);
     }
 }
