--- a/input.css
+++ b/input.css
@@ -27,13 +27,13 @@
         box-shadow: 3px 3px 20px 5px #0001;
     }
     .form-group input {
-        @apply ring-1 ring-[#8884] block w-full px-4 py-2 text-sm tracking-wide text-[#000c];
+        @apply ring-1 ring-[#8884] block w-full px-4 py-2 text-sm tracking-wide text-[#000c] shadow-sm;
     }
     .form-group input:active {
         @apply ring-1 ring-bleu-clair text-[#000c];
     }
     .form-group textarea {
-        @apply ring-1 ring-[#8884] block w-full px-4 py-2 text-sm tracking-wide text-[#000c];
+        @apply ring-1 ring-[#8884] block w-full px-4 py-2 text-sm tracking-wide text-[#000c] shadow-sm;
     }
 }
 
